syntax = "proto3";

option go_package = "github.com/erkrnt/symphony/api";

package api;

message SuccessStatusResponse { bool Success = 1; }