syntax = "proto3";

option go_package = "github.com/erkrnt/symphony/api";

package api;

import "api/service.proto";

service ManagerControl {
  rpc Init(ManagerControlInitRequest) returns (ManagerControlInitResponse) {}
  rpc Leave(ManagerControlLeaveRequest) returns (ManagerControlLeaveResponse) {}
  rpc Remove(ManagerControlRemoveRequest) returns (ManagerControlRemoveResponse) {}
}

service ManagerRemote {
  rpc Init(ManagerRemoteInitRequest) returns (ManagerRemoteInitResponse) {}
  rpc Leave(ManagerRemoteLeaveRequest) returns (ManagerRemoteLeaveResponse) {}
}

// -- CONTROL ENDPOINTS -- //

message ManagerControlInitRequest {
  string Addr = 1;
}
message ManagerControlInitResponse {
  string ServiceID = 1;
}

message ManagerControlLeaveRequest {}
message ManagerControlLeaveResponse {}

message ManagerControlRemoveRequest { string ServiceID = 1; }
message ManagerControlRemoveResponse {}

// -- REMOTE ENDPOINTS -- //

message ManagerRemoteInitRequest {
  string ServiceAddr = 1;
  ServiceType ServiceType = 2;
}
message ManagerRemoteInitResponse {
  string GossipAddr = 1;
  string ServiceID = 2;
}

message ManagerRemoteLeaveRequest { string ServiceID = 1; }
message ManagerRemoteLeaveResponse {}
