syntax = "proto3";

package protobuff;

import "google/protobuf/timestamp.proto";

service Manager {
  rpc GetServiceByHostname(GetServiceByHostnameFields) returns (Service) {}
  rpc GetServiceByID(GetServiceByIDFields) returns (Service) {}
  rpc GetServiceTypeByName(GetServiceTypeByNameFields) returns (ServiceType) {}
  rpc NewService(NewServiceFields) returns (Service) {}
}

message GetServiceByHostnameFields { string Hostname = 1; }

message GetServiceByIDFields { string ID = 1; }

message GetServiceTypeByNameFields { string Name = 1; }

message Service {
  google.protobuf.Timestamp CreatedAt = 1;
  google.protobuf.Timestamp UpdatedAt = 2;
  string ID = 3;
  string Hostname = 4;
  string ServiceTypeID = 5;
}

message ServiceType {
  string ID = 1;
  string Name = 2;
}

message NewServiceFields {
  string Hostname = 1;
  string ServiceTypeID = 2;
}